# mpt3

./: .hgignore  CHANGELOG  Makefile.in  conf.xml  configure  configure.ac  macros.xml
source/getting_started/: installation.xml
source/mpt/: mpt_init.m  mpt_init.xml  mptdoc.xml  mptopt.m  mptopt.xml
source/mpt/demos/: mpt_demo1.xml  mpt_demo2.m  mpt_demo2.xml  mpt_demo_PowerNetworkSystem.m  mpt_demo_deployment_explicitMPC.m  mpt_demo_deployment_explicitMPC.xml  mpt_demo_deployment_explicitMPCtracking.xml  mpt_demo_deployment_onlineMPC.m  mpt_demo_deployment_onlineMPC.xml  mpt_demo_functions1.m  mpt_demo_functions1.xml  mpt_demo_functions2.m  mpt_demo_functions2.xml  mpt_demo_lti1.xml  mpt_demo_lti2.m  mpt_demo_lti2.xml  mpt_demo_lti3.m  mpt_demo_lti3.xml  mpt_demo_lti4.m  mpt_demo_lti4.xml  mpt_demo_lti5.m  mpt_demo_lti5.xml  mpt_demo_opt1.m  mpt_demo_opt1.xml  mpt_demo_pwa1.m  mpt_demo_pwa1.xml  mpt_demo_quadcopter.m  mpt_demo_rtw_explicitmpc.mdl  mpt_demo_rtw_explicitmpctracking.mdl  mpt_demo_rtw_onlinempc.mdl  mpt_demo_sets1.xml  mpt_demo_sets2.xml  mpt_demo_sets3.m  mpt_demo_sets3.xml  mpt_demo_unions1.m  mpt_demo_unions1.xml  mpt_demo_unions2.xml
source/mpt/modules/geometry/: mpt_geometry_options.m  mpt_voronoi.m
source/mpt/modules/parallel/: poolStartup.m
source/mpt/modules/solvers/: mpt_call_cdd.m  mpt_call_cdd.xml  mpt_call_clp.xml  mpt_call_cplex.m  mpt_call_cplex.xml  mpt_call_glpk.xml  mpt_call_gurobi.m  mpt_call_gurobi.xml  mpt_call_lcp.m  mpt_call_lcp.xml  mpt_call_linprog.m  mpt_call_linprog.xml  mpt_call_mosek.m  mpt_call_mplp.m  mpt_call_mplp.xml  mpt_call_mpqp.m  mpt_call_mpqp.xml  mpt_call_nag.xml  mpt_call_plcp.m  mpt_call_plcp.xml  mpt_call_qpc.xml  mpt_call_qpoases.xml  mpt_call_qpspline.xml  mpt_call_quadprog.m  mpt_call_quadprog.xml  mpt_call_sedumi.xml  mpt_detect_solvers.m  mpt_detect_solvers.xml  mpt_enum_plcp.m  mpt_enum_pqp.m  mpt_plcp.m  mpt_plcp.xml  mpt_solve.m  mpt_solve.xml  mpt_solvemp.m  mpt_solvemp.xml  mpt_solvers_options.m  mpt_solvers_options.xml  mpt_subSolvers.m
source/mpt/modules/ui/: mpt_import.m  mpt_import.xml
source/mpt/tests/: asserterrmsg.m  assertwarning.m  run_all_mpt_tests.m  run_in_caller.m  run_mpt_tests.m
source/mpt/tests/bintreeunion/: test_bintreeunion_01_pass.m  test_bintreeunion_02_pass.m  test_bintreeunion_03_pass.m  test_bintreeunion_04_pass.m  test_bintreeunion_toc_01_pass.m  test_bintreeunion_toc_02_pass.m  test_bintreeunion_toc_03_pass.m  test_bintreeunion_toc_04_pass.m  test_bintreeunion_tomatlab_01_pass.m  test_bintreeunion_tomatlab_02_pass.m  test_bintreeunion_tomatlab_03_pass.m
source/mpt/tests/codegen/: modelsim_sfunc.m  test_codegen_01_pass.m  test_codegen_02_pass.m  test_codegen_03_pass.m  test_codegen_04_pass.m  test_codegen_05_pass.m  test_codegen_06_pass.m  test_codegen_sim_01.mdl  test_codegen_sim_02.mdl  test_codegen_sim_03.mdl  test_codegen_sim_04.mdl  test_codegen_sim_05.mdl  test_codegen_st_01_pass.m  test_codegen_st_02_pass.m  test_codegen_st_03_pass.m  test_codegen_st_04_pass.m  test_codegen_st_05_pass.m  test_codegen_st_06_pass.m  test_polyunion_tomatlab_05_pass.m
source/mpt/tests/compatibility/: expctrl.mat  infctrl.mat  mintimectrl.mat  onlctrl.mat  polytopearray.mat  singlepolytope.mat  test_mpt_constructMatrices_01_pass.m  test_mpt_control_01_pass.m  test_mpt_control_02_pass.m  test_mpt_import_01_pass.m  test_mpt_mplp_01_pass.m  test_mpt_mplp_02_pass.m  test_mpt_mplp_03_pass.m  test_mpt_mplp_04_pass.m  test_mpt_mplp_05_pass.m  test_mpt_mplp_06_pass.m  test_mpt_mplp_07_pass.m  test_mpt_mpqp_01_pass.m  test_mpt_mpqp_02_pass.m  test_mpt_mpqp_03_pass.m  test_mpt_mpqp_04_pass.m  test_mpt_mpqp_05_pass.m  test_mpt_mpqp_06_pass.m  test_mpt_mpqp_07_pass.m  test_mpt_mpsol2pu_01_pass.m  test_mpt_removeOverlaps_01_pass.m  test_mpt_removeOverlaps_02_pass.m  test_mptctrl_load_01_pass.m  test_penalty_01_pass.m  test_polytope_01_pass.m  test_polytope_distance_01_pass.m  test_polytope_horzcat_01_pass.m  test_polytope_load_01_pass.m  test_polytope_merge_01_pass.m  test_polytope_mldivide_01_pass.m  test_polytope_plot_01_pass.m  test_polytope_plus_01_pass.m  test_polytope_subsasgn_01_pass.m  test_polytope_uminus_01_pass.m  (+1 more)
source/mpt/utils/: charToColor.m  fast_isEmptySet.m  fast_isFullDim.m  find_region.m  iSetDiff.m  iSetDiff_c.c  mpt_ineq2eq.m  mpt_ineq2eq.xml  mpt_minAffineRep.m  mpt_scale_matrix.m  mpt_scale_matrix.xml  orderForPlot.m  validate_color.m  validate_linestyle.m  validate_marker.m  validate_realmatrix.m  validate_realmatrix3D.m  validate_realvector.m  validate_vartype.m  validate_vector.m
source/rel_notes/: relnote1.xml
(+2712 files in other folders)
